--- a/_vti_cnf/web4u.css
+++ b/_vti_cnf/web4u.css
@@ -9,3 +9,5 @@ vti_filesize:IR|9872
 vti_cachedlinkinfo:VX|S|img2/texture2.jpg S|../images/page-backgrounds/texture.jpg S|assets/images/logo.png
 vti_cachedsvcrellinks:VX|FSUS|32/img2/texture2.jpg NSUS|images/page-backgrounds/texture.jpg FSUS|32/assets/images/logo.png
 vti_backlinkinfo:VX|32/main_copy(1).html 32/main-sep16.html
+vti_syncwith_68.178.246.6\:21/stanford:TX|17 Sep 2013 23:53:06 -0000
+vti_syncofs_68.178.246.6\:21/stanford:TW|18 Sep 2013 12:45:13 -0000
